# Cortex

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  setup_project.sh
config/: cortex.yaml.template  mcp_servers.yaml
config/prompts/: system_v1.txt
config/systemd/: cortex-audio.service  cortex-core.service  cortex-display.service  cortex-npu.service  cortex.target
context/: hardware-research.md  project-context.md
docs/architecture/: agentic-patterns.md  build_docx.py
docs/design/: scope-v0.1.md
docs/guides/: phase-0-hardware-setup.md
scripts/: backup.sh  dev-setup.sh  install-services.sh  patch-axengine.sh  restore.sh  run-soak.sh  setup-mixer.sh  verify-hardware.py
src/cortex/: __init__.py  cli.py  config.py
src/cortex/a2a/: __init__.py  agent_card.py  client.py  server.py  types.py
src/cortex/agent/: action_engine.py  health.py  notifications.py  processor.py  protocols.py  router.py  scheduling.py  types.py
src/cortex/core/: __init__.py  service.py
src/cortex/hal/: protocols.py  types.py
src/cortex/iot/: __init__.py  alerts.py  automations.py  manager.py  protocols.py  registry.py  resolver.py  simulator.py  types.py
src/cortex/ipc/: bus.py  messages.py
src/cortex/knowledge/: __init__.py  chunker.py  ingester.py  retriever.py  store.py  types.py
src/cortex/maintenance/: __init__.py  integrity.py  retention.py
src/cortex/mcp/: __init__.py  client.py  server.py  tool_wrapper.py  types.py
src/cortex/memory/: embedding.py  embedding_protocol.py  episodic.py  extraction.py  migration.py  onnx_embedding.py  protocols.py  retrieval.py  store.py  types.py  working.py
src/cortex/reasoning/: context_assembler.py  prompt_templates.py  protocols.py  token_counter.py  tool_parser.py  types.py
src/cortex/resilience/: __init__.py  circuit_breaker.py  degradation.py  watchdog.py
src/cortex/security/: approval.py  audit.py  audit_integrity.py  firewall.py  log_redactor.py  network.py  permissions.py  protocols.py  rate_limiter.py  sandbox.py  sandbox_types.py  types.py
src/cortex/utils/: logging.py
src/cortex/voice/: metrics.py  pipeline.py  sentence_detector.py  types.py
src/cortex/web/: app.py  auth.py  chat_session.py  dependencies.py  middleware.py
src/cortex/wyoming/: __init__.py  mock.py  server.py  stt_provider.py  tts_provider.py  types.py
tests/: conftest.py
tests/hardware/hal/: test_axcl_npu_hw.py  test_lcd_hw.py  test_peripherals_hw.py
tests/integration/: test_phase2_e2e.py  test_phase3a_e2e.py  test_phase3b_e2e.py  test_phase4_e2e.py  test_phase5_e2e.py  test_phase6_e2e.py
tests/soak/: __init__.py  conftest.py  test_fault_injection.py  test_soak_24h.py
tests/unit/: test_agent_processor.py  test_agent_types.py  test_approval.py  test_audit.py  test_audit_integrity.py  test_builtin_tools.py  test_bus.py  test_calendar_tools.py  test_config.py  test_config_phase2.py  test_context_assembler.py  test_email_tools.py  test_embedding.py  test_embedding_protocol.py  test_episodic_extraction.py  test_episodic_memory.py  test_extraction.py  test_firewall.py  test_health.py  test_knowledge_tool.py  test_log_redactor.py  test_memory_migration.py  test_memory_semantic.py  test_memory_store.py  test_memory_tools_wired.py  test_memory_types.py  test_messages.py  test_network_security.py  test_notification_send_tool.py  test_notifications.py  test_onnx_embedding.py  test_permissions.py  test_prompt_templates.py  test_protocols.py  test_rate_limiter.py  test_reasoning_types.py  test_retention.py  test_retrieval.py  test_router.py  test_sandbox.py  (+12 more)
tests/unit/a2a/: test_agent_card.py  test_client.py  test_server.py
tests/unit/agents/: test_factory.py  test_registry.py
tests/unit/core/: test_service.py
tests/unit/hal/: test_audio.py  test_button_gestures.py  test_mock_npu.py  test_render_loop.py  test_renderer.py  test_rgb565.py  test_text_rendering.py  test_vlm_runner.py
tests/unit/iot/: test_alerts.py  test_automation_tools.py  test_automations.py  test_device_tools.py  test_ha_client.py  test_manager.py  test_mqtt_client.py  test_mqtt_discovery.py  test_registry.py  test_resolver.py  test_simulator.py  test_types.py
tests/unit/knowledge/: __init__.py  test_chunker.py  test_ingester.py  test_retriever.py  test_store.py
tests/unit/maintenance/: test_backup.py  test_integrity.py  test_retention.py
tests/unit/mcp/: test_client.py  test_server.py  test_tool_wrapper.py
tests/unit/pipeline/: test_catalog.py  test_code_generator.py  test_deployer.py  test_promotion.py  test_reviewer.py  test_spec_generator.py
tests/unit/power/: test_power_manager.py  test_power_service.py  test_power_types.py
tests/unit/proactive/: test_briefing.py  test_consolidator.py  test_detector.py  test_engine.py  test_morning_briefing_e2e.py  test_scheduler.py  test_sources.py  test_triggers.py
tests/unit/resilience/: test_circuit_breaker.py  test_degradation.py  test_health_reactive.py  test_watchdog.py
tests/unit/voice/: test_error_recovery.py  test_interruption.py  test_pipeline.py  test_sentence_detector.py
tests/unit/web/: test_a2a.py  test_app.py  test_approvals.py  test_auth.py  test_calendar.py  test_chat.py  test_chat_session.py  test_dashboard.py  test_knowledge.py  test_middleware.py  test_network_security.py  test_notifications_web.py  test_power.py  test_rate_limiting.py  test_security_console.py  test_settings.py  test_tool_pipeline.py  test_tools_page.py
tests/unit/wyoming/: test_server.py  test_stt_provider.py  test_tts_provider.py  test_types.py
tools/example-greeting/: TOOL.yaml
(+104 files in other folders)
